--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,7 @@ html,body {
     margin-top: 40vh;
     font-size: 50px;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.22);
+    // background-color: rgba(0, 0, 0, 0.22); 
 
 }
 
