--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@ html {
   font-size: 50px;
   text-align: center;
   padding: 50px;
+  background-color: rgba(255, 255, 255, 0.28);
   a {
     font-family: 'Roboto', sans-serif;
 
