--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-$bgColor: #CF4647;
+$bgColor: #d45a5b;
 @import url( 'https://fonts.googleapis.com/css?family=Roboto');
 @font-face {
   font-family: mainLogoFont;
