--- a/demo/styles/main.scss
+++ b/demo/styles/main.scss
@@ -8,6 +8,7 @@ $bgColor: #d45a5b;
 body,
 html {
   background-color: $bgColor;
+  font-family: 'Roboto', sans-serif;
 }
 
 #header {
@@ -18,18 +19,16 @@ html {
   text-align: center;
   padding: 50px;
   background-color: rgba(255, 255, 255, 0.28);
+
   a {
-    font-family: 'Roboto', sans-serif;
+    & > i {
+      transition: all 0.2s;
 
-
-  & > i {
-    transition: all .2s;
-
-    &:hover {
-      font-size: 60px;
+      &:hover {
+        font-size: 60px;
+      }
     }
   }
-}
 }
 
 a.nostyle {
@@ -50,4 +49,18 @@ a.nostyle {
   background-color: blue;
   opacity: 0.2;
   height: 100px;
+}
+
+.prop {
+  background-color: rgba(255, 255, 255, 0.28);
+  text-align: center;
+  font-size: 15px;
+  border-radius: 2px;
+  margin: auto;
+  width: 80vw;
+  padding: 20px;
+}
+
+#desc{
+  padding: 100px 10px;
 }
