--- a/demo/styles/main.scss
+++ b/demo/styles/main.scss
@@ -12,15 +12,16 @@ html {
 }
 
 #header {
-  width: 50vw;
   font-family: mainLogoFont;
-  margin: 40vh auto auto;
+  margin: auto;
   font-size: 50px;
   text-align: center;
   padding: 50px;
   background-color: rgba(255, 255, 255, 0.28);
 
   a {
+    font-family: 'Roboto', sans-serif;
+
     & > i {
       transition: all 0.2s;
 
@@ -63,4 +64,19 @@ a.nostyle {
 
 #desc{
   padding: 100px 10px;
+}
+
+#splash {
+  height: 100vh;
+  text-align: center;
+  padding-bottom: 50px;
+  .fa-chevron-circle-down {
+    font-size: 25px;
+  }
+}
+
+.centerView{
+    display: flex;
+    width: 100%;
+    height: 80vh;
 }
