--- a/demo/styles/main.scss
+++ b/demo/styles/main.scss
@@ -17,7 +17,7 @@ html {
 #header {
   font-family: mainLogoFont;
   margin: auto;
-  font-size: 50px;
+  font-size: 8vw;
   text-align: center;
   padding: 50px;
   background-color: rgba(255, 255, 255, 0.28);
